[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Room-Tree/SimplePrototypeAssets/White_White/Base-d0s0d0s0d0.png" type="Texture" id=2]
[ext_resource path="res://Room-Tree/SimplePrototypeAssets/Yellow_Brown/Base-d0s0d0s0d0.png" type="Texture" id=3]
[ext_resource path="res://Room.tscn" type="PackedScene" id=4]
[ext_resource path="res://Images/UI-elements/You_Win_Base.png" type="Texture" id=5]
[ext_resource path="res://Room-Database.tscn" type="PackedScene" id=6]
[ext_resource path="res://Inventory.tscn" type="PackedScene" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="You_Win_Room" parent="." instance=ExtResource( 4 )]
position = Vector2( -1242, 0 )

[node name="TextureRect" parent="You_Win_Room" index="0"]
margin_right = 1242.0
margin_bottom = 954.0
texture = ExtResource( 5 )

[node name="DefaultRoom1" parent="." instance=ExtResource( 4 )]
position = Vector2( -1242, -954 )

[node name="TextureRect" parent="DefaultRoom1" index="0"]
texture = ExtResource( 2 )

[node name="DefaultRoom2" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -954 )

[node name="TextureRect" parent="DefaultRoom2" index="0"]
texture = ExtResource( 3 )

[node name="Room_Database" parent="." instance=ExtResource( 6 )]

[node name="Jib" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="Jib"]
offset = Vector2( 624, 477 )
current = true

[node name="Inventory" parent="Jib" instance=ExtResource( 7 )]
position = Vector2( 207, 813 )
z_index = 1

[connection signal="StillBuildingMap" from="Room_Database" to="." method="_on_RoomDatabase_StillBuildingMap"]

[editable path="You_Win_Room"]
[editable path="DefaultRoom1"]
[editable path="DefaultRoom2"]
